# circuit-split

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  build.bash
cache_optim/: CMakeLists.txt  py.cpp
experiments/: CMakeLists.txt  build.bash
experiments/cache_optim/: CMakeLists.txt  FindPybind11.cmake  cache.hpp
experiments/cache_profiling/: CMakeLists.txt  main.cpp
experiments/cache_simulation/: CMakeLists.txt  FindPybind11.cmake  build.bash  cache.cpp  cache.hpp  layer.cpp  layer.hpp  py.cpp
experiments/eval_speed_test/: CMakeLists.txt  build  common.cpp  common.hpp  defines.hpp  gen.py  gen_bak.py  gen_cuts.bash  good_param.txt  gradient_descent.py  heatmap.py  line.cpp  line.hpp  main.cpp  reorder.py  rollout.bash  semaphore.cpp  semaphore.hpp  test.bash  worker.cpp  worker.hpp
experiments/layer_by_layer_test/: CMakeLists.txt  main.cpp
experiments/mem/: create_dataset.cpp  fit.py
experiments/simulation/: CMakeLists.txt  main.cpp
experiments/simulation/simfiles/: CMakeLists.txt  circuit.h  node.h  sim.cpp
experiments/thread_sync_test/: CMakeLists.txt  main.cpp
experiments/utils/: CMakeLists.txt  argparse.cpp  checksum.cpp  checksum.h  json.cpp  json.h  utils.cpp  utils.h
experiments/vectorizaion_bench/: test.sh
experiments/vectorization_bench/: CMakeLists.txt
experiments/vectorization_trial/: arch_diff.bash  main.cpp  run.bash
experiments_data/20.04.24 ~8 утра/: README.txt
experiments_data/20.04.24 ~?/: README.txt
experiments_data/[exp1] 20.04.24 ~8 утра/: log.json  test_hardcode.bash
experiments_data/[exp2] [data1] 30.04.24 ~?/: README.txt
experiments_data/[exp3] [data2] [data3] Первая проверка аддитивности/: README.txt
experiments_data/[exp4] [data4] Проверка аддитивности - больше данных/: README.txt
experiments_data/start/: main.py
gen_graphs/: circuit_gen.py
gen_schedule/: agregate_rollout.py  gen.py  job.sh  rollout.bash
plots/: bi_thread_plot.py  cahche_graphs2.py  cahche_plots.py  repo.py  sh_tread_plot.py  threads_graphs_2.py
plots/legacy/: threads_graphs_2.py
python/additivity_check/: check.py
utils/: argparse.h  json.cpp  synchronize.h  timer.h  utils.cpp
vectorization_bench/: main.cpp
(+44 files in other folders)
